completed TaskList container component and static stories

--- a/angular.json
+++ b/angular.json
@@ -7,8 +7,7 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "inlineStyle": true,
-          "style": "scss"
+          "inlineStyle": true
         }
       },
       "root": "",
