--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular/cli": "^19.0.7",
     "@angular/compiler-cli": "^19.0.6",
     "@compodoc/compodoc": "^1.1.23",
+    "@storybook/addon-a11y": "^8.6.14",
     "@storybook/addon-essentials": "^8.3.3",
     "@storybook/addon-interactions": "^8.3.3",
     "@storybook/addon-links": "^8.3.3",
@@ -54,6 +55,8 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "msw": "^2.3.0",
     "msw-storybook-addon": "^2.0.3",
+    "prettier": "^3.6.2",
+    "prettier-plugin-organize-imports": "^4.2.0",
     "sass-embedded": "^1.91.0",
     "storybook": "^8.3.3",
     "typescript": "^5.6.3"
